--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,7 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+# segmentation probabilities
+realtime_segmentation_probabilities.csv
+realtime_segmentation_probabilities_plot.png
